# trade_plus

./: README.md  analyze_block_sector.py  analyze_block_trend.py  analyze_low_winrate.py  analyze_trend_chars.py  analyze_winrate_buckets.py  check_603163_now.py  debug_002965.py  deep_analysis.py  pyproject.toml  result.txt  run_600693_detail_final.py  run_all_a_stock_test.py  run_debug_test.py  run_example.py  run_ma_breakout_test.py  run_ma_multi_breakout_test.py  run_winrate_analysis.py  scan_ma20_breakout.py  score_candidates.py  test_603163.py  test_605068.py  test_stock.py  回测分析报告_高胜率股票趋势特征与中长期均线关系.md
trade_plus/: __init__.py
trade_plus/backtest/: __init__.py
trade_plus/backtest/analytics/: __init__.py  metrics.py
trade_plus/backtest/data/: __init__.py  object.py
trade_plus/backtest/engine/: __init__.py  backtesting.py  callback.py  execution.py  facade.py  portfolio.py
trade_plus/backtest/risk/: __init__.py  layer.py
trade_plus/backtest/strategies/: __init__.py  demo.py  ma_breakout.py  ma_multi_breakout.py
trade_plus/backtest/strategy/: __init__.py  template.py
trade_plus/backtest/utils/: __init__.py  tdx_loader.py  utility.py
trade_plus/backtest/visual/: __init__.py  charts.py
